--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,24 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
-	<%= yield %>
+<body id="body">
+	<div id="container">
+		<div id="header">
+			<div id="logo">
+				Logo
+			</div>
+			<div id="menu">
+				Menu
+			</div>
+		</div>
+		<div id="content_h">
+			<div id="content_b">
+				<%= yield %>
+			</div>
+		</div>
+		<div id ="footer">
+			Footer
+		</div>
+	</div>
 </body>
 </html>
